Prepare for 0.1 release: update READMEs.
* NEWS: New file.
* AUTHORS: Add info about files taken from Scheme48.
* HACKING: Update with info from TODO.
* TODO: Remove.

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,1 +1,14 @@
 Jan Nieuwenhuizen <janneke@gnu.org>
+Main author
+All files except the files listed below
+
+Based on Scheme48's scheme/alt
+module/mes/record.mes
+module/mes/syntax.mes
+module/srfi/srfi-9.mes
+
+Based on Guile ECMAScript
+module/language/c/lexer.mes
+
+Included verbatim from gnulib
+build-aux/gitlog-to-changelog
