--- a/README
+++ b/README
@@ -1,41 +1,35 @@
+                                                              -*- org -*-
 Mes -- Maxwell Equations of Software
 
-Mes is inspired by The Maxwell Equations of Software -- John McCarthy page 13
-http://www.softwarepreservation.org/projects/LISP/book/LISP%201.5%20Programmers%20Manual.pdf
+Mes aims to create an entirely source-based bootstrapping path.  The
+target is to [have GuixSD] boostrap from a minimal, easily inspectable
+binary --that should be readable as source-- into something close to
+R5RS Scheme.
 
-Its aim is to have GuixSD boostrap from a minimal trusted binary into
-Scheme.  The strategy is to use OrianJs self-hosting hex assembler to
-write a minimal LISP called MES to bootstrap a full fledged Scheme,
-written in MES.
+As bootstrapping is presumably easiest and probably most fun with
+Scheme, the next step for Mes is mescc: a C compiler/linker to
+boostrap into GNU Gcc and GNU Guile, possibly via Tiny-CC.
+
+Mes is inspired by The Maxwell Equations of Software: [[http://www.softwarepreservation.org/projects/LISP/book/LISP%25201.5%2520Programmers%2520Manual.pdf][LISP-1.5]] -- John
+McCarthy page 13.
 
 Mes is free software, it is distributed unde the terms of the GNU
 General Public Licence version 3 or later.  See the file COPYING.
 
-Current targets.
+* Get it
 
-* make check
+   git clone https://gitlab.com/janneke/mes
 
-* C compiler
+* Build it (see INSTALL for full instructions)
 
-   make mescc
-   make guile-mescc
+   ./configure
+   make all
+   make check
 
-from there, work on mescc.scm, main.c.
+* REPL it
 
-* syntax-case: simple portable version by Andre van Tonder
+   scripts/repl.mes
 
-  TODO
+* Mescc compiler
 
-* syntax-case: using portable psyntax.pp
-
-   make psyntax
-
-* syntax-case using define-macro
-
-   make syntax-case
-   make guile-syntax-case
-
-* PEG
-
-   make peg
-   make guile-peg
+   scripts/mescc.mes doc/examples/main.c
