Support => in cond.
* module/mes/base-0.mes (cond): Support =>.
* module/mes/rea-0.mes (cond): Update.
* NEWS: Update.

--- a/NEWS
+++ b/NEWS
@@ -18,6 +18,7 @@ The C-reader needs only support reading of words and lists
 block-comments are all handled by the Scheme reader later.
 ** Language
 *** Keywords are supported.
+*** Cond now supports =>.
 * Changes in 0.3 since 0.2
 ** Core
 *** Number-based rather than pointer-based cells.
