core: Support keywords.
* display.c (display): Handle keyword.
* mes.c (type_t): Add KEYWORD.
  (eq_p): Handle it.
  (make_keyword): New function.
* reader.c (lookup): Use it.
* type.c (keyword_p): New function.
* NEWS: Update.

--- a/NEWS
+++ b/NEWS
@@ -16,6 +16,8 @@ Please send Mes bug reports to janneke@gnu.org.
 The C-reader needs only support reading of words and lists
 (s-expressions), line-comments.  Quoting, characters, strings,
 block-comments are all handled by the Scheme reader later.
+** Language
+*** Keywords are supported.
 * Changes in 0.3 since 0.2
 ** Core
 *** Number-based rather than pointer-based cells.
