Support Guile optargs.
* module/mes/optargs.upstream.mes: Import latest non-syntax-case
  version from Guile.
* AUTHORS: Add it.
* module/mes/optargs.scm: New file.
* tests/optargs.test: New file.
* GNUmakefile (TESTS): Add it.
* NEWS: Update.

--- a/NEWS
+++ b/NEWS
@@ -19,6 +19,7 @@ block-comments are all handled by the Scheme reader later.
 ** Language
 *** Keywords are supported.
 *** Cond now supports =>.
+*** Lambda* and define* are now supported.
 * Changes in 0.3 since 0.2
 ** Core
 *** Number-based rather than pointer-based cells.
