--- a/AUTHORS
+++ b/AUTHORS
@@ -22,3 +22,6 @@ module/mes/lalr.upstream.mes
 Portable syntax-case from Chez Scheme
 module/mes/psyntax.ss
 module/mes/psyntax-pp.mes [generated]
+
+Optargs from Guile
+module/mes/optargs.upstream.mes
