--- a/NEWS
+++ b/NEWS
@@ -20,6 +20,7 @@ block-comments are all handled by the Scheme reader later.
 *** Keywords are supported.
 *** Cond now supports =>.
 *** Lambda* and define* are now supported.
+*** #;-comment is now supported.
 * Changes in 0.3 since 0.2
 ** Core
 *** Number-based rather than pointer-based cells.
