--- a/NEWS
+++ b/NEWS
@@ -21,6 +21,7 @@ block-comments are all handled by the Scheme reader later.
 *** Cond now supports =>.
 *** Lambda* and define* are now supported.
 *** #;-comment is now supported.
+*** Non-nested #| |#-comment is now supported.
 * Changes in 0.3 since 0.2
 ** Core
 *** Number-based rather than pointer-based cells.
