--- a/AUTHORS
+++ b/AUTHORS
@@ -25,3 +25,6 @@ module/mes/psyntax-pp.mes [generated]
 
 Optargs from Guile
 module/mes/optargs.upstream.mes
+
+Srfi-1 bits from Guile
+module/srfi/srfi-1.upstream.mes
