Support (sxml xpath) for Nyacc c99.
* module/sxml/xpath.mes: New file.
* module/sxml/xpath.upstream.mes: Import from Guile.
* AUTHORS: Mention it.

--- a/AUTHORS
+++ b/AUTHORS
@@ -28,3 +28,6 @@ module/mes/optargs.upstream.mes
 
 Srfi-1 bits from Guile
 module/srfi/srfi-1.upstream.mes
+
+Sxml xpath from Guile
+module/sxml/xpath.upstream.mes
