Support PEG from Guile.
* module/mes/peg.mes: New file.
* module/mes/peg/cache.scm: New file.
* module/mes/peg/codegen.scm: New file.
* module/mes/peg/simplify-tree.scm: New file.
* module/mes/peg/string-peg.scm: New file.
* module/mes/peg/using-parsers.scm: New file.
* tests/peg.test: New file.
* GNUmakefile (TESTS): Add it.

--- a/AUTHORS
+++ b/AUTHORS
@@ -26,6 +26,9 @@ module/mes/psyntax.pp [generated]
 Optargs from Guile
 module/mes/optargs.scm
 
+PEG from Guile
+module/mes/peg/
+
 Pmatch from Guile
 module/mes/pmatch.scm
 
